--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>My Personal Website</title>
+    <title>My Academic Homepage</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>Welcome to my personal website!</p>
+    <h1>My Name</h1>
+    <h2>Position/Title</h2>
+    <p>My research interests include...</p>
+    <h3>Education</h3>
+    <ul>
+      <li>Degree, Institution, Year</li>
+      <li>Degree, Institution, Year</li>
+    </ul>
+    <h3>Publications</h3>
+    <ul>
+      <li>Publication title, Journal/Conference, Year</li>
+      <li>Publication title, Journal/Conference, Year</li>
+    </ul>
+    <h3>Contact Information</h3>
+    <p>Email: myemail@example.com</p>
+    <p>Address: My department, My institution, My city, My country</p>
   </body>
 </html>
