--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Academic Homepage</title>
+    <title>Personal Homepage</title>
   </head>
   <body>
-    <h1>My Name</h1>
+    <h1>Yuting Li</h1>
     <h2>Position/Title</h2>
-    <p>My research interests include...</p>
+    <p>My research interests include Semantics, syntax-semantics interface, experimental approaches to semantics and pragmatics, corpus study, Chinese dialects </p>
     <h3>Education</h3>
     <ul>
-      <li>Degree, Institution, Year</li>
-      <li>Degree, Institution, Year</li>
+      <li>PhD candidate, Department of Philosophy and Humanities, Freie Universität Berlin, Berlin,
+Germany</li>
+<!--       <li>Degree, Institution, Year</li> -->
     </ul>
     <h3>Publications</h3>
     <ul>
@@ -18,7 +19,8 @@
       <li>Publication title, Journal/Conference, Year</li>
     </ul>
     <h3>Contact Information</h3>
-    <p>Email: myemail@example.com</p>
-    <p>Address: My department, My institution, My city, My country</p>
+    <p>Phone: (+49) 15223989369</p>
+    <p>Email: yuting@zedat.fu-berlin.de</p>
+    <p>Address: Habelschwerdter Allee 45, Berlin, Germany</p>
   </body>
 </html>
