--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Yuting Li</h1>
-    <h2>Position/Title</h2>
+<!--     <h2>Position/Title</h2> -->
     <p>My research interests include Semantics, syntax-semantics interface, experimental approaches to semantics and pragmatics, corpus study, Chinese dialects </p>
     <h3>Education</h3>
     <ul>
