--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 Germany</li>
 <!--       <li>Degree, Institution, Year</li> -->
     </ul>
-    <h3>Publications</h3>
+<!--     <h3>Publications</h3>
     <ul>
       <li>Publication title, Journal/Conference, Year</li>
-      <li>Publication title, Journal/Conference, Year</li>
+      <li>Publication title, Journal/Conference, Year</li> -->
     </ul>
     <h3>Contact Information</h3>
     <p>Phone: (+49) 15223989369</p>
